src/css/styles.css
/*******************************
 * Root
 * Global Styles
 */

:root {
  --sans: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  --space: 1rem; /* Used for line-height & grid-gap; */
}

@media (min-width: 64rem) {
  :root {
    --space: 1.5rem;
  }
}

*,
*::before,
*::after {
  box-sizing: border-box;
  /*box-shadow: 0 0 3px 0 rgba(255, 0, 255, 0.3);*/
}

html,
body {
  height: 100%;
}

body {
  display: grid;
  grid-template-rows: 10rem 1fr auto;
	font-family: var(--sans); 
}

/* Typography */

a {
  color: #0066FF;
}

a:visited {
  color: #0066FF;
}

p, ul {
  font-style: normal;
  font-weight: normal;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.02rem;
}

@media (min-width: 64rem) {
  p {
    font-size: 1.2rem;
  }
}

blockquote {
  margin: 0 6rem;
  padding: 0.5rem 0.5rem 0.5rem 2rem;
  border-left: 0.25rem solid #111;
  background-color: #f4f4f4;
}

h3 {
  line-height: 1;
}

h2 {
  font-style: normal;
  font-weight: bold;
  font-size: 3rem;
  line-height: 4rem;
  letter-spacing: -0.01rem;
}

.list-reset {
  list-style-type: none;
  margin: 0;
  padding: 0;
}




/*******************************
 * Header
 */

.header {
  grid-row: 1 / 2;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: var(--space);
  padding: var(--space);
}

.header__logo {
  grid-column: 1 / 2;
  margin: 0;
}

.header__logo a {
  height: 48px;
}

.header__nav {
  grid-column: 3 / 5;
}




/*******************************
 * Nav
 */

.nav {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.nav__item {}

.nav__link {
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: 0.03rem;
  text-decoration: none;
  color: #000;
  padding-bottom: 0.25rem;
}

.nav__link:visited {
  color: #000;
}




/*******************************
 * Footer
 */

.footer {
  grid-row: 3 / 4;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: var(--space);
  background-color: #111;
  color: #fff;
  padding: var(--space);
}

.footer__elsewhere {
  grid-column: 1 / 3;
}

.footer__elsewhere h4 {
  margin-top: 1rem;
}

.footer__elsewhere ul li {
  margin: 0.25rem 0;
}


/*******************************
 * Homepage
 */

.home {
  grid-row: 2 / 3;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: var(--space);
  padding: 0 var(--space);
}

/* Recent Posts */

.home__recent {
  grid-column: 1 / 2;
}

.recent__post time {
  font-size: 0.75rem;
  color: #3c3c3c;
  text-transform: uppercase;
}

.recent__post + .recent__post {
  margin-top: 1rem;
}

/* Links */

.home__links {
  grid-column: 2 / 3;
}

/* Media */

.home__media {
  grid-column: 3 / 4;
}

/* Last.fm */

.tracks {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.track {
  display: flex;
  padding: 0.25rem 0;
  margin-top: 0.25rem;
}

.track__art {
  flex: 0 0 4rem;
  height: 4rem;
  background-color: #f4f4f4;
}

.track__info {
  padding-left: 0.5rem;
}

.track__artist {
  line-height: 1.5rem;
}

/* About */

.page__about {
  grid-column: 4 / 5;
}




/*******************************
 * List Page & Posts
 */

.list-page {
  padding: 0 var(--space);
}

@media (min-width: 64rem) {
  .list-page {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: var(--space);
  }
}

.posts {
  grid-column: 1 / 3;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.post {
  padding: 1rem 0;
}

.post + .post {
  margin-top: 4rem;
}

.post h2 {
  margin: 0 0 1rem 0;
}

.post__meta a {
  text-decoration: none;
}

.post__meta time {
  font-size: 0.75rem;
  color: #3c3c3c;
  text-transform: uppercase;
}

.post__tags {
  display: flex;
}

.post__tags li {
  margin-right: 1rem;
}

.post__tags li a {
  font-size: 0.75rem;
  color: #333;
}

.post__body {
}

.post__body img {
  width: 100%;
  height: auto;
  vertical-align: middle;
}





/*******************************
 * Single Page
 */

.single-page {
  padding: 0 var(--space);
}

@media (min-width: 64rem) {
  .single-page {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: var(--space);
  }
}

.single-post {
  grid-column: 1 / 3;
}

.single-post__body img {
  width: 100%;
  height: auto;
  vertical-align: middle;
}

